--- a/estilo/style.css
+++ b/estilo/style.css
@@ -65,7 +65,8 @@ section p{
 
 .imagem p{
     background-color: rgba(0, 0, 0, 0.158);
-    width: 600px;
+    min-width: 200px;
+    
 }
 
 #img01{
